# biblepay

./: .gitignore  .gitlab-ci.yml  .travis.yml  BuildBiblePay.txt  BuildBiblePayDevelop.txt  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  changelog.md  configure.ac  libbiblepayconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
ci/: Dockerfile.builder  build_src.sh  matrix.sh  test_integrationtests.sh  test_unittests.sh
contrib/: README.md  biblepay-cli.bash-completion  biblepay-qt.pro  biblepay-tx.bash-completion  biblepayd.bash-completion  dash-cli.bash-completion  dash-qt.pro  dashd.bash-completion  gitian-build.py  install_db4.sh  tidy_datadir.sh  valgrind.supp
depends/: README.md  description.md
doc/: Doxyfile  Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  biblepay-conf.md  bips.md  build-cross.md  build-freebsd.md  build-generic.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  guix.md  i2p.md  init.md  instantsend.md  keepass.md  managing-wallets.md  masternode-budget.md  multiprocess.md  productivity.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  (+5 more)
docker/: Dockerfile  Dockerfile.GitHubActions  README.md  build-docker.sh  docker-entrypoint.sh  push-docker.sh
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  addrdb.cpp  addressindex.cpp  addressindex.h  addrman.h  alert.cpp  alert.h  amount.h  base58.cpp  base58.h  batchedlogger.cpp  batchedlogger.h  bbpsocket.h  biblepay-cli-res.rc  biblepay-cli.cpp  biblepay-tx-res.rc  biblepay-tx.cpp  biblepay-wallet-res.rc  biblepayd-res.rc  biblepayd.cpp  bip39.h  bip39_english.h  bloom.cpp  (+112 more)
src/biblepaybls/rust-bindings/bls-signatures/: Cargo.toml
src/biblepaybls/rust-bindings/bls-signatures/src/: elements.rs  lib.rs  private_key.rs  schemes.rs  utils.rs
src/biblepaybls/rust-bindings/bls-signatures/src/bip32/: chain_code.rs  private_key.rs  public_key.rs
src/biblepaybls/src/: CMakeLists.txt  legacy.cpp  threshold.cpp
(+995 files in other folders)
